--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
     /* background-color: #f0f0f0; */
 }
