--- a/src/Components/footer.module.css
+++ b/src/Components/footer.module.css
@@ -1,102 +1,109 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px;
-    background-color:#1e1e1e;
-    color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 20px;
+  background-color: #1e1e1e;
+  color: white;
+}
+
+.section {
+  flex: 1 1 200px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.section h2 {
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.section ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.section li {
+  margin-bottom: 5px;
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  border-top: 1px solid #ccc;
+}
+
+.connect, .app {
+  flex: 1 1 300px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.socialmedia {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+}
+
+.socialmedia li {
+  margin: 0 10px;
+}
+
+.appstore li {
+  margin: 10px;
+}
+
+.copyright {
+  text-align: center;
+  padding: 10px;
+  margin-top: -20px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .connect, .app {
+    flex: 1 1 100%;
+    margin-bottom: 15px;
   }
   
   .section {
-    width: 250px;
-    margin: 10px;
-    padding: 10px;
-    /* border: 1px solid #ccc; */
-    border-radius: 5px;
-  }
-  
-  .section h2 {
-    text-align:left;
-    margin-bottom: 10px;
-  }
-  
-  .section ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .section li {
-    margin-bottom: 5px;
-  }
-  
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     width: 100%;
-    padding: 20px;
-    border-top: 1px solid #ccc;
+    margin: 5px 0;
   }
-  
-  .connect {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+@media (max-width: 480px) {
+  .section {
+    width: 100%;
+    padding: 5px;
   }
-  
-  .connect h3 {
-    margin-bottom: 10px;
-  }
-  
-  .socialmedia {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-  }
-  
+
   .socialmedia li {
     margin: 0 5px;
   }
-  
-  .socialmedia li a {
-    color: #333;
-    font-size: 20px;
-  }
-  
-  .app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .app h3 {
-    margin-bottom: 10px;
-  }
-  
-  .appstore {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .appstore li {
-    margin: 0 5px;
-  }
-  
-  .appstore li a {
-    display: inline-block;
-  }
-  
-  .appstore li a img {
-    width: 120px;
-  }
-  
 
-  
-  .copyright {
-    text-align: center;
-    padding: 10px;
-    /* border-top: 1px solid #ccc; */
-    margin-top: -70px;
+  .appstore li {
+    margin: 5px;
   }
+
+  .appstore li a img {
+    width: 100px;
+  }
+}
